config/examples/TLSRoute_default_example-tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: example-tls-route
  namespace: default
spec:
  parentRefs:
    - name: gateway1
      namespace: default
      sectionName: https18443
  hostnames:
    - "example.com"
    - "*.example.com"
  rules:
    - backendRefs:
        - name: example-backend-service
          namespace: default
          port: 8443
          weight: 100
